[Fix] fix reward cut off (#502)
* change class names for description, quest name, and currency name.

* adjust max heights, add color variables

* Adjust max-width and max-height to match new size

* Add new props and add some adjustments for better organization

* Update package version to 1.24.0 in package.json

* Adjust max-height, max-width, and padding for improved layout consistency

* Update border color in QuestCard styles for improved visual consistency

* Update package version to 1.25.0 in package.json

* [UI] Add tooltip (#505)

* add tooltip on overflow to quest card currency name and description

* add comment todo

* add tooltip and fix overflow with quest name, refactor to shared hook

---------

--- a/src/components/QuestCard/QuestCardStory.module.scss
+++ b/src/components/QuestCard/QuestCardStory.module.scss
@@ -1,6 +1,6 @@
-$border: 2px var(--color-neutral-600) solid;
+$border: 2px var(--color-stroke-strong) solid;
 
 .root {
-  max-width: 345px;
-  max-height: 345px;
+  max-width: 278.67px;
+  max-height: 302.75px;
 }
